# Purity2D

./: .Purity-Engine.xcscheme  .clang-format  .generatescheme.rb  .gitignore  .travis-update-gh-pages.sh  .travis.yml  .update-gh-pages.sh  :w  AndroidManifest.xml  Bugfix_SDL_platform.h  CMakeLists.txt  CMakeLists.txt.user.NL5540  LICENSE.txt  Purity-Engine.xcscheme  README.md  android.txt  appveyor.yml  appveyortest.ps1  bin.7z
assets/: README.txt  config.ini
assets/scenes/init/: eventHandler.lua  main.lua  map.tmx  onPhysicsUpdate.lua  playerMovement.lua  serverActionHandler.lua  servercfg.lua
build-scripts/: android.sh  ios.sh  linux.sh  osx.sh  windows.bat  windows.ps1
build-scripts/ci/appveyor/: appveyortest.ps1  appveyortest.sh  ci-linter.ps1  ci-translator.ps1  gh-pages-test.sh  update-gh-pages.ps1  update-gh-pages.sh  vartest.ps1  vartest.sh
build-scripts/ci/appveyor/tests/: appveyorvartest.ps1  gluevartest.sh
build-scripts/ci/general/: ci-linter.sh  update-gh-pages.sh
build-scripts/ci/travis/: ci-translator.sh  travistest.sh  update-gh-pages.sh
build-scripts/ci/travis/tests/: gluevartest.sh  travisvartest.sh
extlibs/: CMakeLists.txt
extlibs/Box2D/: CMakeLists.bk.txt  CMakeLists.txt
extlibs/Box2D/Common/: b2Settings.h
extlibs/LuaBridge/detail/: Stack.h
extlibs/SDL2-2.0.3/: CMakeLists.txt
extlibs/SDL2-2.0.3/include/: SDL_config.h.cmake
extlibs/SDL2-2.0.3/src/render/opengles/: SDL_render_gles.c
extlibs/SDL2_image-2.0.0/: CMakeLists.txt  SDL_image.h
extlibs/SFML-2.1/: CMakeLists.txt
extlibs/SFML-2.1/cmake/: Macros.cmake
extlibs/SFML-2.1/src/SFML/Window/Linux/: WindowImplX11.cpp
extlibs/TmxParser/: CMakeLists.txt  Tmx.h  TmxEllipse.cpp  TmxImageLayer.cpp  TmxLayer.cpp  TmxUtil.cpp
extlibs/TmxParser/base64/: base64.cpp
extlibs/TmxParser/zlib/: gzguts.h
extlibs/enet/: CMakeLists.txt  host.c
extlibs/guisan/: CMakeLists.txt
extlibs/guisan/include/guichan/: platform.hpp
extlibs/guisan/src/sdl/: sdlinput.cpp
extlibs/inih/: CMakeLists.txt  ini.c  ini.h
extlibs/lua-5.1.5/: CMakeLists.txt
extlibs/lua-5.2.2/: CMakeLists.txt
extlibs/lua-5.2.2/src/: luaconf.h
extlibs/stb_image/: CMakeLists.txt  stb_image.c  stb_image.h
extlibs/tinyxml2-2.2.0/: CMakeLists.txt
libs/: CMakeLists.txt
libs/Box2D/: CMakeLists.txt
libs/SFML-2.0/: CMakeLists.txt
libs/TmxParser/: CMakeLists.txt  TmxImage.cpp  TmxLayer.cpp  TmxMap.cpp  TmxObject.cpp  TmxObjectGroup.cpp  TmxPolygon.cpp  TmxPolyline.cpp  TmxPropertySet.cpp  TmxTile.cpp  TmxTileset.cpp
libs/lua-5.2.2/: CMakeLists.txt
libs/luabind/: CMakeLists.txt
libs/luabind/luabind/detail/: call_function.hpp
src/: CMakeLists.txt  engine.cpp  engine.h  entity.cpp  entity.h  gamemap.cpp  gamemap.h  inputmanager.cpp  inputmanager.h  layer.cpp  layer.h  luamanager.cpp  luamanager.h  main.cpp  movableentity.cpp  movableobject.cpp  movableobject.h  object.cpp  object.h  objectmanager.cpp  objectmanager.h  physicssystem.cpp  physicssystem.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h  spritesheet.cpp  spritesheet.h  tile.cpp  tile.h
src/engine/: CMakeLists.txt  abstractsystem.cpp  abstractsystem.h  commandlinearguments.cpp  commandlinearguments.h  engine.cpp  engine.h  inputmanager.cpp  inputmanager.h  luamanager.cpp  luamanager.h  main.cpp  networkaction.cpp  networkaction.h  networkmanager.cpp  networkmanager.h  networksystem.cpp  networksystem.h  physicssystem.cpp  physicssystem.h  renderer.cpp  renderer.h  rendersystem.cpp  rendersystem.h  scenemanager.cpp  scenemanager.h  subsystemable.cpp  subsystemable.h
src/framework/: CMakeLists.txt  client.cpp  client.h  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  entitystate.cpp  entitystate.h  event.cpp  event.h  gamemap.cpp  gamemap.h  host.cpp  host.h  layer.cpp  layer.h  movableentity.cpp  movableentity.h  objectmanager.cpp  objectmanager.h  scene.cpp  scene.h  server.cpp  server.h  spritesheet.cpp  spritesheet.h  texturemanager.cpp  texturemanager.h  tile.cpp  tile.h  window.cpp  window.h
src/framework/entity/: CMakeLists.txt  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  entitystate.h  movableentity.cpp  movableentity.h
src/framework/graphics/: CMakeLists.txt  drawable.h  font.cpp  font.h  rect.cpp  rect.h  renderer.cpp  renderer.h  rendertarget.cpp  rendertarget.h  text.cpp  text.h  texture.cpp  texture.h  texturemanager.cpp  texturemanager.h  transformable.cpp  transformable.h  vertex.cpp  vertex.h  vertexarray.cpp  vertexarray.h  view.cpp  view.h
src/framework/gui/: CMakeLists.txt  button.cpp  button.h  font.cpp  font.h  input.h  text.h
src/framework/input/: CMakeLists.txt  mouse.cpp  mouse.h
src/framework/network/: CMakeLists.txt  client.cpp  client.h  host.cpp  host.h  networkaction.h  server.cpp  server.h
src/framework/system/: CMakeLists.txt  action.h  actionmanager.cpp  actionmanager.h  configuration.cpp  configuration.h  event.cpp  event.h  timer.cpp  timer.h  vector2.h  vector2.inl
src/framework/window/: CMakeLists.txt  window.cpp  window.h  windowmanipulator.cpp  windowmanipulator.h
src/framework/window/win32/: window.cpp  window.h
src/org/libsdl/app/: SDLActivity.java
