set(BOX2D_BUILD_STATIC 1)
set(BOX2D_BUILD_SHARED 0)
add_subdirectory(Box2D)
add_subdirectory(lua-5.2.2)
add_subdirectory(TmxParser)
add_subdirectory(enet)
add_subdirectory(SDL2-2.0.3)
add_subdirectory(stb_image)
add_subdirectory(inih)
add_subdirectory(tinyxml2-2.2.0)

set(EXTLIBS_FOLDER "External Libraries")

set_target_properties("Box2D" PROPERTIES FOLDER ${EXTLIBS_FOLDER})
set_target_properties("lua" PROPERTIES FOLDER ${EXTLIBS_FOLDER})
set_target_properties("tmxparser_static" PROPERTIES FOLDER ${EXTLIBS_FOLDER})
set_target_properties("enet" PROPERTIES FOLDER ${EXTLIBS_FOLDER})
set_target_properties("SDL2-static" PROPERTIES FOLDER ${EXTLIBS_FOLDER})
set_target_properties("inih" PROPERTIES FOLDER ${EXTLIBS_FOLDER})
